# claude-workflow

./: .gitignore  CLAUDE.md  README.md
.claude/agents/: analyst.md  discovery.md  proto-auditor.md  role-auditor.md  role-creator.md
.claude/commands/: workflow-audit-role.md  workflow-create-role.md  workflow-feature.md  workflow-improve.md  workflow-new-feature.md
cli/: Cargo.toml  install.sh
cli/src/: self_update.rs
core/agents/: analyst.md  architect.md  codebase-expert.md  curator.md  developer.md  diagnostician.md  functionality-analyst.md  omega-router.md  qa.md  reviewer.md  role-auditor.md  role-creator.md  test-writer.md
core/commands/: omega-bugfix.md  omega-cortex-config.md  omega-diagnose.md  omega-improve.md  omega-understand.md  workflow-audit-role.md  (+15 more)
docs/: DOCS.md  agent-functionalities.md  agent-inventory.md  architecture.md  institutional-memory.md  setup-guide.md
extensions/cortex-bridge/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
extensions/cortex-bridge/src/: auth.rs  config.rs  lib.rs  main.rs  models.rs  routes.rs  storage.rs
extensions/cortex-bridge/tests/: integration.rs  security.rs
scripts/: build-protocol-index.sh  db-init.sh  setup.sh
specs/: SPECS.md  cortex-architecture.md  cortex-requirements.md  omega-cli-architecture.md  persona-architecture.md  persona-requirements.md
tests/: test-cortex-m1-schema.sh  test-cortex-m10-middleware.sh  test-cortex-m11-bridge.sh  test-cortex-m13-bridge-security.sh  test-cortex-m8-sync-adapters.sh  test-cortex-m9-cloud-config.sh  test-persona.sh  test-setup-idempotency.sh
(+47 files in other folders)
