[package]
name = "cortex-bridge"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Self-hosted OMEGA Cortex sync bridge server"

[dependencies]
# HTTP server - std doesn't have HTTP server
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }

# TLS - required for security (REQ-CTX-056)
axum-server = { version = "0.7", features = ["tls-rustls"] }

# SQLite - storage backend
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization - serde is the Rust standard for JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HMAC auth - ring is pure Rust crypto, zero C dependencies
ring = "0.17"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Timestamp
chrono = { version = "0.4", features = ["serde"] }

# Use std for everything else:
# - std::env for config
# - std::fs for file operations
# - std::collections::HashMap
# - std::sync::Arc for shared state
# - std::time::Instant for rate limiting

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
